--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "serve": "vite preview",
     "build": "vite build",
-    "lint": "eslint --ext .js,.vue --ignore-path .gitignore --fix src",
+    "lint": "eslint .eslintrc.js --ext .js,.vue --ignore-path .gitignore --fix src",
     "dev": "vite",
     "preview": "vite preview"
   },
@@ -32,6 +32,7 @@
     "@vuetify/vite-plugin": "^1.0.0-alpha.0",
     "babel-eslint": "^10.1.0",
     "eslint": "^8.13.0",
+    "eslint-plugin-import": "^2.26.0",
     "eslint-plugin-vue": "^8.6.0",
     "sass": "^1.51.0",
     "sass-loader": "^10.0.0",
