--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,12 +22,14 @@
     "roboto-fontface": "*",
     "socket.io-client": "^2.0.0",
     "vue": "^3.2.25",
+    "vue-i18n": "^9.1.10",
     "vue-router": "^4.0.3",
     "vuetify": "^3.0.0-beta.0",
     "webfontloader": "^1.0.0"
   },
   "devDependencies": {
     "@babel/eslint-parser": "^7.17.0",
+    "@intlify/vite-plugin-vue-i18n": "^3.4.0",
     "@vitejs/plugin-vue": "^2.3.1",
     "@vuetify/vite-plugin": "^1.0.0-alpha.0",
     "babel-eslint": "^10.1.0",
