--- a/backend/.eslintrc.json
+++ b/backend/.eslintrc.json
@@ -5,27 +5,14 @@
     "mocha": true
   },
   "parserOptions": {
-    "ecmaVersion": 2018
+    "ecmaVersion": 2020
   },
   "extends": [
     "eslint:recommended"
   ],
   "rules": {
-    "indent": [
-      "error",
-      2
-    ],
-    "linebreak-style": [
-      "error",
-      "unix"
-    ],
-    "quotes": [
-      "error",
-      "single"
-    ],
-    "semi": [
-      "error",
-      "always"
-    ]
+					"indent": [ "error", 3 ],
+					"quotes": ["error", "single", { "avoidEscape": true }],
+					"semi": ["error", "always"]
   }
 }
