--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
     "@feathersjs/feathers": "^4.5.12",
     "@feathersjs/socketio-client": "^4.5.13",
     "@mdi/font": "5.9.55",
+    "@vueuse/core": "^8.6.0",
     "core-js": "^3.8.3",
     "feathers-hooks-common": "^5.0.6",
     "feathers-pinia": "^0.33.1",
