change color and add particules

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,10 +18,12 @@
     "core-js": "^3.8.3",
     "feathers-hooks-common": "^5.0.6",
     "feathers-pinia": "^0.33.1",
+    "particles.vue3": "^2.0.6",
     "path": "^0.12.7",
     "pinia": "^2.0.14",
     "roboto-fontface": "*",
     "socket.io-client": "^2.0.0",
+    "tsparticles": "^2.0.6",
     "vue": "^3.2.25",
     "vue-i18n": "^9.1.10",
     "vue-router": "^4.0.3",
